--- a/index.html
+++ b/index.html
@@ -36,11 +36,13 @@
           </ul>
         </div>
     </nav>
-    <div class="text-white pl-5 pt-4">
-        <h1 class="title pb-3">Jane Doe</h1>
-        <p class="text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque nobis nam rem, unde, cupiditate fugiat veniam quasi at, magnam dolorem maxime praesentium hic pariatur provident ipsa nulla doloribus reprehenderit ut?
-        </p>
+    <div class=" row text-white pl-5 pt-4">
+        <div class="col-lg-6 col-md-8">
+            <h1 class="title pb-3">Jane Doe</h1>
+            <p class="text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque nobis nam rem, unde, cupiditate fugiat veniam quasi at, magnam dolorem maxime praesentium hic pariatur provident ipsa nulla doloribus reprehenderit ut?
+            </p>
+        </div>
     </div>
 </body>
 </html>
