--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 </head>
 <body>
     <nav class="navbar fixed-bottom navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#"><img src="/images/computer.svg" alt="" style="height: 30px;" class="ml-5 mr-4">Jane Doe</a>
+        <a class="navbar-brand" href="#"><img src="/images/computer.svg" alt="" style="height: 30px;" class="ml-lg-5 mr-lg-4 ml-md-5 mr-md-4 ml-sm-2 mr-sm-3 ">Jane Doe</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
       
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ml-auto mr-5">
+          <ul class="navbar-nav ml-auto mr-lg-5">
             <li class="nav-item active">
               <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
@@ -36,8 +36,8 @@
           </ul>
         </div>
     </nav>
-    <div class=" row text-white pl-5 pt-4">
-        <div class="col-lg-6 col-md-8">
+    <div class="row text-white pl-lg-5 pt-lg-4  pl-md-5 pt-md-4 pl-sm-4 pt-sm-4">
+        <div class="col-lg-6 col-md-8 p-sm-3">
             <h1 class="title pb-3">Jane Doe</h1>
             <p class="text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque nobis nam rem, unde, cupiditate fugiat veniam quasi at, magnam dolorem maxime praesentium hic pariatur provident ipsa nulla doloribus reprehenderit ut?
